--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -1,15 +1,17 @@
-<div ng-click="toggleDetail()" class="auction-info auction-info col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="auction-label col-xs-6">{{'texts.username' | i18next}}</div>
-    <div class="auction-cell col-xs-6 col-sm-3 col-md-3 col-lg-3"><span>{{driver.username}}</span></div>
-    <div class="auction-label col-xs-6">{{'texts.name' | i18next}}</div>
-    <div class="auction-cell col-xs-6 col-sm-3 col-md-3 col-lg-3"><span>{{driver.name}} {{driver.surname}}</span></div>
-    <div class="auction-label col-xs-6">{{'texts.user.my_shipments' | i18next}}</div>
-    <div class="auction-cell col-xs-6 col-sm-4 col-md-4 col-lg-4">
-        <b>{{driverShipments.length}}</b> / {{notAssignedShipments.length}}
-    </div>
-    <div class="auction-cell assignment col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <div class="my-button normal-button assign-button" ng-click="assignDriver(driver.ID, $event)">
-            {{'texts.user.assign_button' | i18next}}
+<div ng-click="toggleDetail()" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="auction-info auction-info col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="auction-label col-xs-6">{{'texts.username' | i18next}}</div>
+        <div class="auction-cell col-xs-6 col-sm-3 col-md-3 col-lg-3"><span>{{driver.username}}</span></div>
+        <div class="auction-label col-xs-6">{{'texts.name' | i18next}}</div>
+        <div class="auction-cell col-xs-6 col-sm-3 col-md-3 col-lg-3"><span>{{driver.name}} {{driver.surname}}</span></div>
+        <div class="auction-label col-xs-6">{{'texts.user.my_shipments' | i18next}}</div>
+        <div class="auction-cell col-xs-6 col-sm-4 col-md-4 col-lg-4">
+            <b>{{driverShipments.length}}</b> / {{notAssignedShipments.length}}
+        </div>
+        <div class="auction-cell assignment col-xs-12 col-sm-2 col-md-2 col-lg-2">
+            <div class="my-button normal-button assign-button" ng-click="assignDriver(driver.ID, $event)">
+                {{'texts.user.assign_button' | i18next}}
+            </div>
         </div>
     </div>
 </div>
