- Get auction cache

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<script src="/app/shared/Services/AuctionService.js"></script>
 		<script src="/app/shared/Services/UserService.js"></script>
 		<script src="/app/shared/Services/UserAbilityService.js"></script>
+		<script src="/app/shared/Services/AdminService.js"></script>
 
 		<!-- Controllers -->
 		<script src="/app/shared/mainController.js"></script>
