--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -1,5 +1,5 @@
 <div ng-click="toggleDetail()" class="global-list-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="auction-info auction-info col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="auction-info col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="auction-label col-xs-6">{{'texts.username' | i18next}}</div>
         <div class="auction-cell col-xs-6 col-sm-3 col-md-3 col-lg-3"><span>{{driver.username}}</span></div>
         <div class="auction-label col-xs-6">{{'texts.name' | i18next}}</div>
