- refresh ceny je i v oblibenych a prihazujících - kalendar je v jazyku podle toho jakej je zvolen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+		<script src="/node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.cs.min.js"></script>
 		<script src="/node_modules/angular/angular.js"></script>
 		<script src="/bower_components/angular-timer/dist/angular-timer.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
