- dodání u aukce - viditelnost ceny u ridice - gdpr podmínky - sender bude mit kredit(podíl)

--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -67,6 +67,13 @@
                 </div>
                 <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_size}}</span></div>
             </div>
+            <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
+                    <span class="normal-icon glyphicon glyphicon-time"></span>
+                    <span>{{'texts.auction.delivery' | i18next}}:</span>
+                </div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.delivery}}</span></div>
+            </div>
         </div>
     </div>
     <hr class="col-xs-12 col-sm-12 hidden-md hidden-lg">
