--- a/app/shared/directives/DetailShipment/detailShipmentDirective.html
+++ b/app/shared/directives/DetailShipment/detailShipmentDirective.html
@@ -78,5 +78,12 @@
             </div>
             <div class="detail-content col-xs-6 col-sm-6 col-md-6 col-lg-7"><span>{{item.freight.freight_size}}</span></div>
         </div>
+        <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="detail-label col-xs-6 col-sm-6 col-md-6 col-lg-5">
+                <span class="normal-icon glyphicon glyphicon-time"></span>
+                <span>{{'texts.auction.delivery' | i18next}}:</span>
+            </div>
+            <div class="detail-content col-xs-6 col-sm-6 col-md-6 col-lg-7"><span>{{item.delivery}}</span></div>
+        </div>
     </div>
 </div>
