--- a/app/shared/directives/pagingDirective.html
+++ b/app/shared/directives/pagingDirective.html
@@ -1,9 +1,9 @@
 <div class="navigation-bar">
-    <button class="my-button normal-button navigation" ng-disabled="page <= '1'" ng-click="vm.minus()">
+    <button class="my-button normal-button navigation" ng-disabled="page <= '1'" ng-click="minus()">
         <span class="glyphicon glyphicon-arrow-left"></span>
     </button>
     <input class="navigation-text-input" disabled="disabled" type="text" value="{{page}} / {{pagesCount}}"/>
-    <button class="my-button normal-button navigation" ng-disabled="isLastPage" ng-click="vm.plus()">
+    <button class="my-button normal-button navigation" ng-disabled="isLastPage" ng-click="plus()">
         <span class="glyphicon glyphicon-arrow-right"></span>
     </button>
 </div>
