--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 		<script src="/bower_components/angular-timer/dist/angular-timer.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
 		<script src="/node_modules/lodash/lodash.js"></script>
+		<script src="/node_modules/angular-ui-router/release/stateEvents.js"></script>
 		<script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="/node_modules/restangular/src/restangular.js"></script>
         <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
 		<script src="/node_modules/lightbox2/dist/js/lightbox.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"></script>
+		<script src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
 
