--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<script src="/node_modules/jquery/dist/jquery.js"></script>
 		<script src="/node_modules/jquery-simple-timer/jquery.simple.timer.js"></script>
 		<script src="/node_modules/jquery-countdown/dist/jquery.countdown.min.js"></script>
+		<script src="/node_modules/jq-accordion/dist/js/jquery.accordion.min.js"></script>
 		<script src="/node_modules/moment/min/moment.min.js"></script>
+		<script src="/node_modules/moment/min/locales.min.js"></script>
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
@@ -92,6 +94,7 @@
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog.min.css" />
         <link rel="stylesheet" href="/node_modules/ng-dialog/css/ngDialog-theme-default.min.css" />
         <link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.css" />
+		<link rel="stylesheet" href="/node_modules/jq-accordion/dist/css/jquery.accordion.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
