--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -32,11 +32,15 @@
                     {{'texts.auction.from' | i18next}}:
                 </span>
                 <span class="detail-content">{{item.address_from}}</span>
+                <div ng-if="item.load_note" class="note">{{item.load_note}}</div>
             </div>
             <div class="detail-row address col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <span class="glyphicon glyphicon-flag"></span>
-                <span class="detail-label">{{'texts.auction.to' | i18next}}:</span>
+                <span class="detail-label">
+                    {{'texts.auction.to' | i18next}}:
+                </span>
                 <span class="detail-content">{{item.address_to}}</span>
+                <div ng-if="item.unload_note" class="note">{{item.unload_note}}</div>
             </div>
             <div class="col-xs-12 hidden-sm col-md-12 col-lg-12 margin-divider"></div>
         </div>
