--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</div>
 				</div>
 				<div ng-if="isLoggedUser()" class="header-right col-xs-12 col-sm-12 col-md-8 col-lg-6">
-					<div class="user col-xs-12 col-sm-9 col-md-9 col-lg-9" ui-sref="my_profile"><span class="glyphicon glyphicon-user"></span><span>{{usernameMain}} ({{roleNameMain}})</span></div>
+					<div class="user col-xs-12 col-sm-9 col-md-9 col-lg-9" ui-sref="my_profile"><span class="glyphicon glyphicon-user"></span><span>{{usernameMain}}</span></div>
 					<div class="logout col-xs-12 col-sm-3 col-md-3 col-lg-3" ng-click="logout()"><span class="glyphicon glyphicon-off"></span>{{'texts.logout' | i18next}}</div>
 				</div>
 			</div>
