--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 		<link rel="icon" type="image/png"  href="images/favicon.png">
 
 		<!-- scripts from NPM -->
-		<script src="/node_modules/jquery/dist/jquery.js"></script>
+		<script src="/node_modules/jquery/dist/jquery.min.js"></script>
 		<script src="/node_modules/jquery-simple-timer/jquery.simple.timer.js"></script>
 		<script src="/node_modules/jquery-countdown/dist/jquery.countdown.min.js"></script>
 		<script src="/node_modules/jq-accordion/dist/js/jquery.accordion.min.js"></script>
 		<script src="/node_modules/moment/min/moment.min.js"></script>
 		<script src="/node_modules/moment/min/locales.min.js"></script>
-		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 		<script src="/node_modules/bootstrap-datepicker/dist/locales/bootstrap-datepicker.cs.min.js"></script>
-		<script src="/node_modules/angular/angular.js"></script>
-		<script src="/bower_components/angular-timer/dist/angular-timer.js"></script>
+		<script src="/node_modules/angular/angular.min.js"></script>
+		<script src="/bower_components/angular-timer/dist/angular-timer.min.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
-		<script src="/node_modules/lodash/lodash.js"></script>
-		<script src="/node_modules/angular-ui-router/release/stateEvents.js"></script>
-		<script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-		<script src="/node_modules/restangular/src/restangular.js"></script>
+		<script src="/node_modules/lodash/lodash.min.js"></script>
+		<script src="/node_modules/angular-ui-router/release/stateEvents.min.js"></script>
+		<script src="/node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+		<script src="/node_modules/restangular/dist/restangular.min.js"></script>
         <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
-		<script src="/node_modules/lightbox2/dist/js/lightbox.js"></script>
+		<script src="/node_modules/lightbox2/dist/js/lightbox.min.js"></script>
 		<script src="/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="/js/i18next-1.10.1.min.js"></script>
 		<script src="/js/ng-i18next.js"></script>
@@ -82,8 +82,6 @@
 
 		<!-- Google Maps JavaScript API -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyDv7qv63UymYWbSAL1m8ZRgYOj9yyrifxE"></script>
-		<!-- autocomplete google -->
-		<script src="/node_modules/geocomplete/jquery.geocomplete.js"></script>
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
